# jsknown

./: .gitignore  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
burp-plugin/: build.gradle  settings.gradle
burp-plugin/src/main/java/dev/jsknown/burp/: JsknownBurpExtension.java
burp-plugin/src/test/java/dev/jsknown/burp/: PluginSmokeTest.java
crates/jsknown-cli/: Cargo.toml
crates/jsknown-cli/src/: main.rs
crates/jsknown-core/: Cargo.toml
crates/jsknown-core/src/: analysis.rs  beautify.rs  chunks.rs  config.rs  fetcher.rs  ingest.rs  lib.rs  optimizer.rs  preanalysis.rs  processor.rs  sourcemap.rs  storage.rs
crates/jsknown-server/: Cargo.toml
crates/jsknown-server/src/: lib.rs
