[workspace]
members = [
    "crates/jsknown-cli",
    "crates/jsknown-core",
    "crates/jsknown-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/davi-1337/jsknown"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
html-escape = "0.2"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
urlencoding = "2"
