[package]
name = "jsknown-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
jsknown-core = { path = "../jsknown-core" }
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
